--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             margin: 15px auto 0;
         }
         
+        .custom-background-color {
+            display: none;
+        }
+        
         .save-after-edit {
             display: none;
         }
@@ -52,8 +56,10 @@
                         <a id="filter-low" class="dropdown-item" href="#">Low</a>
                     </div>
                 </div>
-                <button type="button" class="btn btn-primary mx-2"><i class="fas fa-sort-numeric-up-alt"></i></button>
-                <button type="button" class="btn btn-primary"><i class="fas fa-sort-numeric-up"></i></button>
+                <button type="button" class="btn btn-primary mx-2" id="h-l-sort"><i
+                        class="fas fa-sort-numeric-up-alt"></i></button>
+                <button type="button" class="btn btn-primary" id="l-h-sort"><i
+                        class="fas fa-sort-numeric-up"></i></button>
             </div>
             <div class="d-flex">
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -80,24 +86,34 @@
                                 <h5 class="mb-1 task-title">Title</h5>
                                 <div class="hide-prior-date">
                                     <small class="mr-2 priority">High Priority</small>
-                                    <small>11:00 01.01.2000</small>
+                                    <small class="task-date">11:45 12-08-2020</small>
                                 </div>
+
                                 <div class="dropdown hide-select-priority select-priority">
                                     <button type="button" class="btn btn-outline-success btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         <small>Select Priority</small></button>
                                     </button>
                                     <ul class="dropdown-menu dropdown-menu-priority">
-                                        <li class="dropdown-input"><label><input id="edit-high" type="radio"
-                                                    value="High" name="Priority"> High Priority
+                                        <li class="dropdown-input"><label><input class="edit-high" id="edit-high"
+                                                    type="radio" value="High" name="Priority"> High Priority
                                             </label></li>
-                                        <li class="dropdown-input"><label><input id="edit-medium" type="radio"
-                                                    value="Medium" name="Priority"> Medium Priority
+                                        <li class="dropdown-input"><label><input class="edit-medium" id="edit-medium"
+                                                    type="radio" value="Medium" name="Priority"> Medium Priority
                                             </label></li>
-                                        <li class="dropdown-input"><label><input id="edit-low" type="radio" value="Low"
-                                                    name="Priority">
+                                        <li class="dropdown-input"><label><input class="edit-low" id="edit-low"
+                                                    type="radio" value="Low" name="Priority">
                                                 Low Priority
                                             </label></li>
                                     </ul>
+                                </div>
+                                <div class="dropdown custom-background-color">
+                                    <button type="button" class="btn btn-outline-success btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <small>Select Color</small></button>
+                                    </button>
+                                    <div class="dropdown-menu color-picker">
+                                        <input type="color" class="form-control mr-2" id="taskBackgroundEdit" name="taskBackgroundEdit" value="#CBF7BC">
+                                    </div>
+
                                 </div>
                             </div>
                             <p class="mb-1 w-100 task-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid eaque eligendi error eveniet nostrum nulla pariatur repudiandae, veniam. Provident.
@@ -105,9 +121,10 @@
                         </div>
 
                         <div class="dropdown m-2 dropleft">
-                            <button class=" btn btn-success h-100 save-after-edit">
+                            <button class=" btn btn-success h-100 save-after-edit" id="save">
                                 <p class="save-text">SAVE</p>
                             </button>
+
                             <button class="btn btn-secondary h-100 hide-dropdown" type="button" id="dropdownMenuItem1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-ellipsis-v"></i>
                             </button>
@@ -176,6 +193,12 @@
                                 </div>
                             </div>
                         </fieldset>
+                        <div class="form-group row">
+                            <label for="taskBackground" class="col-sm-2 col-form-label">Color</label>
+                            <div class="col-sm-10">
+                                <input type="color" class="form-control" id="taskBackground" name="taskBackground" value="#CBF7BC">
+                            </div>
+                        </div>
                         <div class="form-group row">
                             <div class="col-sm-12 text-center">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
