fix: update files

--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
                         <a class="p-2 bd-highlight group-list" id="list-btn">
                             <i class="fas fa-align-justify"></i>
                         </a>
+                        <!--DAY/NIGHT-->
+                        <div class="custom-control custom-switch">
+                            <input type="checkbox" class="custom-control-input" id="night-switch">
+                            <label class="custom-control-label" for="night-switch"><i class="fas fa-moon"></i></label>
+                        </div>
                     </div>
                 </div>
             </div>
